2009-05-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	distdir: avoid duplicate `find' traversal with subpackages.
	* lib/am/distdir.am (distdir) [%?SUBDIRS%]: When recursing, set
	`am__skip_mode_fix'.
	[%?TOPDIR_P%]: When `$(am__skip_mode_fix)' is set, avoid tree
	walk.
	* tests/subpkg4.test: New test, to ensure that we still walk the
	whole tree while fixing permissions.  We don't ensure it is
	walked once only.
	* tests/Makefile.am: Update.

	Disable test cleanup trap with OSF1/Tru64 sh.
	* configure.ac: Test whether /bin/sh has working 'set -e'
	in conjunction with an exit trap.  Set $am_cv_sh_errexit_works
	accordingly, substitute sh_errexit_works, and warn about
	leftover test directories with broken shells like Tru64 /bin/sh.
	* tests/defs.in: Do not install any traps with broken shells.

2009-05-02  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Recommend *-local hooks without commands, for extensibility.
	* doc/automake.texi (Clean): Show how to write the clean-local
	extension with separate phony target.
	* tests/Makefile.am (clean-local-check): Practice what we preach
	by marking this phony.  For consistency, rename from ...
	(check-clean-local): ... this.

2009-04-28  Eric Blake  <ebb9@byu.net>

	scripts: normalize all timestamps to UTC
	* lib/compile (scriptversion): Update emacs hook.
	* lib/depcomp (scriptversion): Likewise.
	* lib/elisp-comp (scriptversion): Likewise.
	* lib/gnupload (scriptversion): Likewise.
	* lib/install-sh (scriptversion): Likewise.
	* lib/mdate-sh (scriptversion): Likewise.
	* lib/missing (scriptversion): Likewise.
	* lib/mkinstalldirs (scriptversion): Likewise.
	* lib/py-compile (scriptversion): Likewise.
	* lib/ylwrap (scriptversion): Likewise.

2009-04-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	silent-rules: fix alignment of less verbose output.
	* automake.in (define_verbose_var): Define `$silent_var' as
	VAR_ASIS, not VAR_PRETTY, to avoid squashing of multiple
	adjacent spaces.