@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996, 1997, 2001, 2003, 2005
+## Copyright (C) 1994, 1995, 1996, 1997, 2001, 2003, 2005, 2009
 ## Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
