@@ -1,5 +1,9 @@
 2009-05-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix copyright years in *.am files.
+	* lib/am/check.am, lib/am/check2.am, lib/am/distdir.am,
+	lib/am/program.am, lib/am/tags.am: Fix copyright years.
+
 	distdir: avoid duplicate `find' traversal with subpackages.
 	* lib/am/distdir.am (distdir) [%?SUBDIRS%]: When recursing, set
 	`am__skip_mode_fix'.
